--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,6 +3,7 @@
 .about {
   background: $color-inicio-fondo;
   padding: 7rem 0;
+  padding-bottom: 12px;
 
   &__secciones {
     display: flex;
@@ -24,7 +25,8 @@
     height: 20rem;
     background-size: cover;
     border-radius: 50%;
-    box-shadow: var(--box-shadow-principal);
+    -webkit-box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
+    box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
   }
 
   &__picture {
@@ -70,7 +72,8 @@
     display: block;
     border-radius: 0.5rem;
     object-fit: cover;
-    box-shadow: var(--box-shadow-principal);
+    -webkit-box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
+    box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
   }
 
   &__redes {
@@ -301,4 +304,3 @@
 .notiTres {
   grid-area: notiTres;
 }
-
