--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,3 +11,4 @@ $color-boton-hover: #3dfaff;
 $color-principal-footer: #283048;
 $color-titulo-inicio: #fefae0;
 $color-inicio-fondo: #fefdff;
+$color-prueba: #ff5666;
