--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -15,12 +15,15 @@
   }
 
   &__titulo {
-    color: $color-negro;
+    @include style-link-text($color-negro);
     font-size: 2.5rem;
   }
 
+  .nav__titulo--producto {
+    @include style-link-text($color-blanco);
+  }
+
   &__link {
-    color: $color-negro;
     text-decoration: none;
     margin-left: 1em;
     display: inline-block;
@@ -42,6 +45,10 @@
     }
   }
 
+  .nav__link--color {
+    @include style-link-text($color-blanco);
+  }
+
   &__link--boton:visited,
   &__link--boton:link {
     text-transform: uppercase;
@@ -49,7 +56,6 @@
     padding: 0.4rem 0.7rem;
     background: $color-primario;
     border: 0.2rem solid $color-negro;
-    border-radius: 10rem;
     cursor: pointer;
     color: $color-negro;
     display: inline-block;
@@ -65,6 +71,11 @@
       transform: translateY(-0.1rem);
       box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
     }
+  }
+
+  .nav__style--btn:visited,
+  .nav__style--btn:link {
+    @include style-link-btn($color-prueba);
   }
 
   &__pintura {
