--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,3 +12,4 @@ $color-principal-footer: #283048;
 $color-titulo-inicio: #fefae0;
 $color-inicio-fondo: #fefdff;
 $color-prueba: #ff5666;
+$color-servi: #26dfd0;
