--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -86,6 +86,11 @@
   &__input {
     display: none;
   }
+
+  .servi__style--btn:visited,
+  .servi__style--btn:link {
+    @include style-link-btn($color-servi);
+  }
 }
 
 @media (max-width: 962px) {
