--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -35,6 +35,7 @@
 
   &__cta {
     @extend %btn-placeholder;
+    @include style-link-btn($color-prueba);
   }
 }
 
@@ -196,6 +197,12 @@
     justify-content: center;
   }
 
+  &__mensaje {
+    -webkit-box-shadow: 0px 10px 13px -7px #000000,
+      -1px 4px 16px 2px rgba(0, 0, 0, 0);
+    box-shadow: 0px 10px 13px -7px #000000, -1px 4px 16px 2px rgba(0, 0, 0, 0);
+  }
+
   &__control {
     display: flex;
     align-items: center;
@@ -241,6 +248,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 0.7rem;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000,
+      -1px 4px 16px 2px rgba(0, 0, 0, 0);
+    box-shadow: 0px 10px 13px -7px #000000, -1px 4px 16px 2px rgba(0, 0, 0, 0);
   }
 
   &__imagenUno {
