--- a/sass/pages/_producto.scss
+++ b/sass/pages/_producto.scss
@@ -38,6 +38,7 @@
 
 .fa-solid:hover {
   background: #f8333c;
+  box-shadow: 0px 5px 15px -2px rgba(0, 0, 0, 0.27);
 }
 
 .card1 {
@@ -84,5 +85,3 @@
   grid-area: card9;
   height: 600px;
 }
-
-
