--- a/sass/pages/_servicios.scss
+++ b/sass/pages/_servicios.scss
@@ -12,11 +12,12 @@
       "servithree servithree servifour servifour servinoti";
     justify-items: center;
     align-items: center;
+    align-items: stretch;
   }
 
   &__control {
-    -webkit-box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
-    box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
+    /* box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75); */
+    box-shadow: -1px 2px 7px 1px rgba(0, 0, 0, 0.31);
     display: flex;
     border-radius: 1rem;
   }
@@ -54,7 +55,7 @@
   }
 
   &__title {
-    color: #0c0708;
+    color: #ff2768;
     text-align: center;
     font-size: 2.2rem;
     font-family: "Poppins", sans-serif;
@@ -66,7 +67,7 @@
     font-size: 2rem;
     font-family: "Poppins", sans-serif;
 
-    color: #320d6d;
+    color: #05e0e9;
   }
 
   &__paragrafo {
@@ -97,8 +98,7 @@
   font-size: 1.3rem;
   font-weight: 700;
   padding: 0.5rem 7rem;
-  background: #320d6d;
-  border: 1px solid $color-negro;
+  background: #4e1a3d;
   outline: none;
   border-radius: 3rem;
   cursor: pointer;
@@ -106,8 +106,10 @@
   transition: all 0.2s;
 
   &:hover {
-    background: #a9fdac;
+    background: #26dfd0;
     box-shadow: none;
+    border: none;
+    box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.29);
   }
 }
 
@@ -129,9 +131,7 @@
 
 .servinoti {
   grid-area: servinoti;
-  -webkit-box-shadow: 0px 10px 13px -7px #000000,
-    -1px 4px 16px 2px rgba(0, 0, 0, 0);
-  box-shadow: 0px 10px 13px -7px #000000, -1px 4px 16px 2px rgba(0, 0, 0, 0);
+  box-shadow: 1px 2px 14px -4px rgba(0, 0, 0, 0.75);
 
   &__ul {
     list-style-type: none;
@@ -292,7 +292,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 1fr);
   grid-template-areas: "seccion2-grid1 seccion2-grid2";
-  border: 2px solid #9a4c95;
+  box-shadow: 3px 4px 15px -7px rgba(0, 0, 0, 1);
 
   .seccion2-grid1 {
     grid-area: seccion2-grid1;
@@ -309,7 +309,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 1fr);
   grid-template-areas: "seccion3-grid1 seccion3-grid2";
-  border: 2px solid #9a4c95;
+  box-shadow: 3px 4px 15px -7px rgba(0, 0, 0, 1);
 
   .seccion3-grid1 {
     grid-area: seccion3-grid1;
